--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
-    "pubsub-js": "^1.7.0"
+    "pubsub-js": "^1.7.0",
+    "react-transition-group": "^1.2.1"
   }
 }
