--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "pubsub-js": "^1.7.0",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
