--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "immutable": "^3.8.2",
     "pubsub-js": "^1.7.0",
+    "react-redux": "^5.0.7",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
